welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:7: error: value || is not a member of Int
	if (nbBiscuit=2||nbBiscuit<2){droite();
                       ^Poucet:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if (nbBiscuit=2||nbBiscuit<2){droite();
                     ^Poucet:10: error: not found: value estSurJaune
}while (estSurJaune)
        ^